# isat-cv

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  init.sh  justfile  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/src/: main.py
color-search/: Dockerfile
color-search/src/: context.py  cs_context.py  main.py  utils.py
config/: config.json  example.json
db/: init.sql
frontend/: .env.sample  .gitignore  Dockerfile  README.md  package.json  vite.config.js
frontend/src/routes/: +page.svelte
image-blender/src/: main.py  utils.py
image-processer/: Dockerfile
image-processer/src/: context.py  main.py
image-search/src/: context.py  is_context.py  main.py  utils.py
scraper/src/: context.py  main.py  process.py  utils.py
shared/: color.py  db.py  entities.py  logger.py  models.py  resources.py
src/isat/: __init__.py
text-search/src/: main.py  ts_context.py  utils.py
